# fastapi-reference-arch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  azure.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/skills/: PILOT_TEST_PLAN.md  PILOT_TEST_RUNS.md  ROUTING.md
.github/skills/repo-architecture/: SKILL.md
.github/skills/repo-auth-entra/: SKILL.md
.github/skills/repo-azure-deploy/: SKILL.md
.github/skills/repo-doc-sync/: SKILL.md
.github/skills/repo-migration-safety/: SKILL.md
.github/skills/repo-observability/: SKILL.md
.github/skills/repo-testing/: SKILL.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20241205_create_todos_table.py  20260320_add_todos_updated_at_trigger.py  20260402_create_users_table.py
app/: __init__.py  main.py
app/api/: __init__.py
app/core/: __init__.py  config.py  database.py
app/core/exceptions/: __init__.py  app_exceptions.py
app/core/logging/: __init__.py  logger.py
app/core/middleware/: correlation.py
app/models/: __init__.py
app/repo/: __init__.py  base.py  todo_repository.py
app/routes/: __init__.py  todos_router.py
app/schemas/: __init__.py  todo.py
app/services/: todo_service.py
docs/: DEPLOYMENT.md  issues_learning.md  migrations-setup.md
docs/design/: instrument-flow.md  prd.md  projectstructure.md  techstack.md  userflow.md
docs/guides/: auth-setup.md  error-contract.md  observability-validation.md  template-playbook.md
infra/: README.md
infra/bicep/: README.md  main.bicep  main.json  main.parameters.json
infra/hooks/: postpackage.sh  postprovision.sh  preprovision.sh
infra/scripts/: bootstrap_db.sh  provision.sh  run_migrations.sh
scripts/: format.sh  lint.sh  seed_data.py  verify_deployment.sh
scripts/kusto/: auth-failures.kql  custom-events.kql  custom-metrics.kql  dependencies.kql  end-to-end-flow-by-operation.kql  exceptions.kql  requests.kql  run-observability-suite.sh  traces.kql
tests/: conftest.py  test_auth.py  test_database_entra.py  test_todos.py  test_token_validation.py  test_users.py
(+39 files in other folders)
